fix doc & constant redundanties in multi

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -35,7 +35,15 @@
    "execution_count": 1,
    "id": "af4eca31-878c-41ed-85be-d249d03be71b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/docrep/decorators.py:43: SyntaxWarning: 'kwargs' is not a valid key!\n"
+     ]
+    }
+   ],
    "source": [
     "# import liana\n",
     "import liana as li\n",
@@ -350,67 +358,70 @@
      "text": [
       "\u001b[0;31mSignature:\u001b[0m\n",
       "\u001b[0mrank_aggregate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0madata\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'an.AnnData'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0madata\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'an.AnnData | MuData'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mgroupby\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mresource_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'consensus'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mexpr_prop\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'float'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mmin_cells\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'int'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mbase\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'float'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2.718281828459045\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0maggregate_method\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'rra'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0maggregate_method\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'rra'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mconsensus_opts\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[list]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mreturn_all_lrs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'bool'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mkey_added\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'liana_res'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mconsensus_opts\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0muse_raw\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[bool]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mlayer\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[str]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mde_method\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m't-test'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[bool]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mn_perms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'int | None'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mde_method\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'str'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m't-test'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mn_perms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'int'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mseed\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'int'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1337\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m    \u001b[0mresource\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[DataFrame]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0minteractions\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0mmdata_kwargs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;34m\u001b[0m    \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0minteractions\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[list]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mmdata_kwargs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'dict'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'bool'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m    \u001b[0mverbose\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'Optional[bool]'\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\n",
       "\u001b[0;34m\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mDocstring:\u001b[0m\n",
+      "Get an aggregate of ligand-receptor scores from multiple methods.\n",
+      "\n",
       "Parameters\n",
       "----------\n",
       "adata\n",
       "    Annotated data object.\n",
       "groupby\n",
-      "    The key of the observations grouping to consider.\n",
+      "    Key to be used for grouping.\n",
       "resource_name\n",
-      "    Name of the resource to be loaded and use for ligand-receptor inference.\n",
+      "    Name of the resource to be used for ligand-receptor inference. See `li.rs.show_resources()` for available resources.\n",
       "expr_prop\n",
-      "    Minimum expression proportion for the ligands/receptors (and their subunits) in the\n",
-      "     corresponding cell identities. Set to `0`, to return unfiltered results.\n",
+      "    Minimum expression proportion for the ligands and receptors (+ their subunits) in the\n",
+      "    corresponding cell identities. Set to 0 to return unfiltered results.\n",
       "min_cells\n",
-      "    Minimum cells per cell identity (`groupby`) to be considered for downstream analysis\n",
+      "    Minimum cells per cell identity (grouped by `groupby`) to be considered for downstream analysis.\n",
       "base\n",
-      "    Exponent base used to reverse the log-transformation of matrix. Note that this is\n",
-      "    relevant only for the `logfc` method.\n",
+      "    Exponent base used to reverse the log-transformation of the matrix. Relevant only for the `logfc` method.\n",
       "aggregate_method\n",
       "    Method aggregation approach, one of ['mean', 'rra'], where `mean` represents the\n",
       "    mean rank, while 'rra' is the RobustRankAggregate (Kolde et al., 2014)\n",
       "    of the interactions\n",
+      "consensus_opts\n",
+      "    Strategies to aggregate interactions across methods.\n",
+      "    Default is None - i.e. ['Specificity', 'Magnitude'] and both specificity and magnitude are aggregated.\n",
       "return_all_lrs\n",
-      "    Bool whether to return all LRs, or only those that surpass the `expr_prop`\n",
-      "    threshold. Those interactions that do not pass the `expr_prop` threshold will\n",
-      "    be assigned to the *worst* score of the ones that do. `False` by default.\n",
+      "    Bool whether to return all ligand-receptor pairs, or only those that surpass the `expr_prop`\n",
+      "    threshold. Ligand-receptor pairs that do not pass the `expr_prop` threshold will be assigned\n",
+      "    to the *worst* score of the ones that do. `False` by default.\n",
       "key_added\n",
-      "    Key to add the results to the `uns` attribute of `adata`.\n",
+      "    Key under which the results will be stored in `adata.uns` if `inplace` is True.\n",
       "use_raw\n",
-      "    Use raw attribute of adata if present. True, by default.\n",
+      "    Use raw attribute of adata if present.\n",
       "layer\n",
       "    Layer in anndata.AnnData.layers to use. If None, use anndata.AnnData.X.\n",
       "de_method\n",
       "    Differential expression method. `scanpy.tl.rank_genes_groups` is used to rank genes\n",
       "    according to 1vsRest. The default method is 't-test'.\n",
       "verbose\n",
-      "    Verbosity flag\n",
+      "    Verbosity flag.\n",
       "n_perms\n",
-      "    Number of permutations for the permutation test. Note that this is relevant\n",
-      "    only for permutation-based methods - e.g. `CellPhoneDB`. If `None` is passed, \n",
-      "    no permutation testing is performed. Thus, specificity_rank is not returned. \n",
+      "    Number of permutations for the permutation test. Relevant only for permutation-based methods\n",
+      "    (e.g., `CellPhoneDB`). If `None` is passed, no permutation testing is performed.\n",
       "seed\n",
       "    Random seed for reproducibility.\n",
       "resource\n",
@@ -422,8 +433,9 @@
       "    If passed, it will overrule the resource requested via `resource` and `resource_name`.\n",
       "mdata_kwargs\n",
       "    Keyword arguments to be passed to `li.fun.mdata_to_anndata` if `adata` is an instance of `MuData`.\n",
+      "    If an AnnData object is passed, these arguments are ignored.\n",
       "inplace\n",
-      "    If true return `DataFrame` with results, else assign inplace to `.uns`.\n",
+      "    Whether to store results in place, or else to return them.\n",
       "\n",
       "Returns\n",
       "-------\n",
@@ -581,7 +593,13 @@
     "**Note**\n",
     "\n",
     "LIANA will by default use the `.raw` attribute of AnnData. If you wish to use .X set `use_raw` to `False`, or specify a `layer`.\n",
-    "    \n",
+    "\n",
+    "LIANA will also by default use the 'consensus' resource to infer ligand-receptor interactions. \n",
+    "This resource was created as a consensus from the resources literature-curated resources in OmniPath, and uses **human gene symbols**.\n",
+    "\n",
+    "For different species, we provide 'mouseconsensus', for any other species you can provide your own resource, or translate LIANA's resources via [decoupler](https://decoupler-py.readthedocs.io/en/latest/notebooks/translate.html).\n",
+    "\n",
+    "If you wish to use a different resource, please specify it via the `resource_name` parameter for internal resources, or provide an external one via `resource` or `interactions`.\n",
     "    \n",
     "</div>  "
    ]
@@ -612,13 +630,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 308.70it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 259.34it/s]\n"
      ]
     }
    ],
    "source": [
     "# run cellphonedb\n",
-    "cellphonedb(adata, groupby='bulk_labels', expr_prop=0.1, verbose=True, key_added='cpdb_res')"
+    "cellphonedb(adata, groupby='bulk_labels', expr_prop=0.1, resource_name='consensus', verbose=True, key_added='cpdb_res')"
    ]
   },
   {
@@ -865,7 +883,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8728345974211)>"
+       "<ggplot: (8773885512638)>"
       ]
      },
      "execution_count": 13,
@@ -931,7 +949,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/plotting/_common.py:102: SettingWithCopyWarning: \n",
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/plotting/_common.py:104: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -951,7 +969,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8728342544784)>"
+       "<ggplot: (8773881344724)>"
       ]
      },
      "execution_count": 14,
@@ -1015,7 +1033,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:02<00:00, 341.86it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 298.46it/s]\n"
      ]
     },
     {
@@ -1033,7 +1051,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:03<00:00, 331.70it/s]\n"
+      "100%|██████████| 1000/1000 [00:03<00:00, 286.51it/s]\n"
      ]
     }
    ],
@@ -1277,7 +1295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/plotting/_common.py:102: SettingWithCopyWarning: \n",
+      "/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/plotting/_common.py:104: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1297,7 +1315,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8728342514523)>"
+       "<ggplot: (8773885517059)>"
       ]
      },
      "execution_count": 18,
@@ -1351,7 +1369,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8728337116094)>"
+       "<ggplot: (8773886040836)>"
       ]
      },
      "execution_count": 19,
@@ -1449,7 +1467,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8728336893652)>"
+       "<ggplot: (8773885885753)>"
       ]
      },
      "execution_count": 22,
@@ -1689,7 +1707,7 @@
   "kernelspec": {
    "display_name": "spiana",
    "language": "python",
-   "name": "spiana"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1702,11 +1720,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.10"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "80a99255e5b17beb6f8c8dc403ec70687184f3f6557a2c5fe71e16aa6505930d"
-   }
   }
  },
  "nbformat": 4,
