re-run tutorials

--- a/docs/source/notebooks/liana_c2c.ipynb
+++ b/docs/source/notebooks/liana_c2c.ipynb
@@ -456,7 +456,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now running: stim&1488: 100%|██████████| 16/16 [01:59<00:00,  7.48s/it]\n"
+      "Now running: stim&1488: 100%|██████████| 16/16 [03:01<00:00, 11.32s/it]\n"
      ]
     }
    ],
@@ -469,7 +469,7 @@
     "    verbose=True, # use 'full' to show all verbose information\n",
     "    n_perms=100, # reduce permutations for speed\n",
     "    return_all_lrs=True, # return all LR values\n",
-    "    ) "
+    "    )"
    ]
   },
   {
@@ -814,7 +814,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8750226273803)>"
+       "<ggplot: (8767517289779)>"
       ]
      },
      "execution_count": 11,
@@ -880,7 +880,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 16/16 [00:33<00:00,  2.06s/it]\n"
+      "100%|██████████| 16/16 [00:51<00:00,  3.21s/it]\n"
      ]
     }
    ],
@@ -1649,7 +1649,7 @@
    ],
    "source": [
     "# generate ligand-receptor geneset\n",
-    "lr_progeny = li.rs.generate_lr_geneset(lr_pairs, net, lr_separator=\"^\")\n",
+    "lr_progeny = li.rs.generate_lr_geneset(lr_pairs, net, lr_sep=\"^\")\n",
     "lr_progeny.head()"
    ]
   },
