--- a/docs/source/notebooks/mofacellular.ipynb
+++ b/docs/source/notebooks/mofacellular.ipynb
@@ -264,7 +264,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:04<00:00,  1.97it/s]\n"
+      "100%|██████████| 8/8 [00:04<00:00,  1.81it/s]\n"
      ]
     }
    ],
@@ -982,7 +982,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8778907796514)>"
+       "<ggplot: (8766990569271)>"
       ]
      },
      "execution_count": 18,
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1116,13 +1116,13 @@
        "9614    DCs  APOBEC3A  1.504961 -0.074503  0.004163 -0.028965 -0.011071"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "variable_loadings =  li.ut.get_variable_loadings(mdata, varm_key='LFs', view_separator=':') # get loadings\n",
+    "variable_loadings =  li.ut.get_variable_loadings(mdata, varm_key='LFs', view_sep=':') # get loadings\n",
     "# order features by absolute value for Factor 1\n",
     "variable_loadings = variable_loadings.sort_values(by='Factor1', key=lambda x: abs(x), ascending=False)\n",
     "variable_loadings.head()"
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1148,10 +1148,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8778907796556)>"
+       "<ggplot: (8766977141658)>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1217,7 @@
        "Expectations: W, Z"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1239,7 @@
        "<Figure size 640x480 with 2 Axes>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
