--- a/docs/source/notebooks/mofatalk.ipynb
+++ b/docs/source/notebooks/mofatalk.ipynb
@@ -249,22 +249,22 @@
      "output_type": "stream",
      "text": [
       "Now running: ctrl&101:   0%|          | 0/16 [00:00<?, ?it/s]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&107:   6%|▋         | 1/16 [00:07<01:53,  7.57s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:16<01:58,  8.49s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:34<02:48, 12.95s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:48<02:39, 13.27s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:56<02:04, 11.32s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1256:  38%|███▊      | 6/16 [01:04<01:42, 10.29s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: ctrl&1488:  44%|████▍     | 7/16 [01:25<02:03, 13.77s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&101:  50%|█████     | 8/16 [01:42<01:58, 14.81s/it] /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&107:  56%|█████▋    | 9/16 [01:53<01:33, 13.42s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1015:  62%|██████▎   | 10/16 [02:01<01:11, 11.85s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1016:  69%|██████▉   | 11/16 [02:11<00:55, 11.18s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1039:  75%|███████▌  | 12/16 [02:17<00:38,  9.59s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1244:  81%|████████▏ | 13/16 [02:21<00:24,  8.09s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1256:  88%|████████▊ | 14/16 [02:27<00:14,  7.39s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488:  94%|█████████▍| 15/16 [02:34<00:07,  7.14s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
-      "Now running: stim&1488: 100%|██████████| 16/16 [02:42<00:00, 10.14s/it]\n"
+      "Now running: ctrl&107:   6%|▋         | 1/16 [00:07<01:54,  7.60s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1015:  12%|█▎        | 2/16 [00:14<01:36,  6.90s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1016:  19%|█▉        | 3/16 [00:27<02:09,  9.95s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1039:  25%|██▌       | 4/16 [00:40<02:14, 11.20s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1244:  31%|███▏      | 5/16 [00:51<01:59, 10.90s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1256:  38%|███▊      | 6/16 [01:01<01:46, 10.69s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: ctrl&1488:  44%|████▍     | 7/16 [01:12<01:37, 10.81s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&101:  50%|█████     | 8/16 [01:21<01:22, 10.36s/it] /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&107:  56%|█████▋    | 9/16 [01:28<01:04,  9.23s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1015:  62%|██████▎   | 10/16 [01:34<00:48,  8.12s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1016:  69%|██████▉   | 11/16 [01:43<00:41,  8.40s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1039:  75%|███████▌  | 12/16 [01:49<00:31,  7.76s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1244:  81%|████████▏ | 13/16 [01:54<00:20,  6.93s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1256:  88%|████████▊ | 14/16 [02:00<00:13,  6.69s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488:  94%|█████████▍| 15/16 [02:07<00:06,  6.72s/it]/home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/pandas/core/indexing.py:1728: ImplicitModificationWarning: Trying to modify attribute `.obs` of view, initializing view as actual.\n",
+      "Now running: stim&1488: 100%|██████████| 16/16 [02:15<00:00,  8.45s/it]\n"
      ]
     }
    ],
@@ -521,7 +521,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788731861452)>"
+       "<ggplot: (8738780054168)>"
       ]
      },
      "execution_count": 10,
@@ -581,7 +581,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44/44 [00:00<00:00, 280.24it/s]\n"
+      "100%|██████████| 44/44 [00:00<00:00, 233.07it/s]\n"
      ]
     }
    ],
@@ -1096,7 +1096,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788725739454)>"
+       "<ggplot: (8738789889718)>"
       ]
      },
      "execution_count": 17,
@@ -1253,9 +1253,9 @@
    "source": [
     "variable_loadings =  li.ut.get_variable_loadings(mdata,\n",
     "                                                 varm_key='LFs',\n",
-    "                                                 view_separator=':',\n",
-    "                                                 pair_separator=\"&\",\n",
-    "                                                 variable_separator=\"^\") # get loadings for factor 1\n",
+    "                                                 view_sep=':',\n",
+    "                                                 pair_sep=\"&\",\n",
+    "                                                 variable_sep=\"^\") # get loadings for factor 1\n",
     "variable_loadings.head()"
    ]
   },
@@ -1287,7 +1287,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788853808690)>"
+       "<ggplot: (8738797396665)>"
       ]
      },
      "execution_count": 20,
@@ -1392,7 +1392,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788731931405)>"
+       "<ggplot: (8738789771174)>"
       ]
      },
      "execution_count": 23,
@@ -1543,7 +1543,7 @@
    ],
    "source": [
     "# generate ligand-receptor geneset\n",
-    "lr_progeny = li.rs.generate_lr_geneset(lr_pairs, net, lr_separator=\"^\")\n",
+    "lr_progeny = li.rs.generate_lr_geneset(lr_pairs, net, lr_sep=\"^\")\n",
     "lr_progeny.head()"
    ]
   },
@@ -1789,9 +1789,9 @@
    ],
    "source": [
     "lr_loadings =  li.ut.get_variable_loadings(mdata,\n",
-    "                                              varm_key='LFs',\n",
-    "                                              view_separator=':',\n",
-    "                                              )\n",
+    "                                           varm_key='LFs',\n",
+    "                                           view_sep=':',\n",
+    "                                           )\n",
     "lr_loadings.set_index('variable', inplace=True)\n",
     "# pivot views to wide\n",
     "lr_loadings = lr_loadings.pivot(columns='view', values='Factor1')\n",
@@ -1836,7 +1836,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8788724494712)>"
+       "<ggplot: (8738786681881)>"
       ]
      },
      "execution_count": 28,
