misty plot docs

--- a/docs/source/notebooks/misty.ipynb
+++ b/docs/source/notebooks/misty.ipynb
@@ -546,7 +546,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:03<00:00,  3.42s/it]\n"
+      "100%|██████████| 1/1 [00:05<00:00,  5.69s/it]\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:32<00:00,  2.96s/it]\n"
+      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [01:03<00:00,  5.74s/it]\n"
      ]
     }
    ],
@@ -865,7 +865,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818508485)>"
+       "<ggplot: (8741319897569)>"
       ]
      },
      "execution_count": 19,
@@ -903,7 +903,7 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726796691844)>"
+       "<ggplot: (8741319679928)>"
       ]
      },
      "execution_count": 20,
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -941,10 +941,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818577595)>"
+       "<ggplot: (8741342025407)>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "4  Adipocytes            Mast  intra     0.131783"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1073,10 +1073,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818095654)>"
+       "<ggplot: (8741319559967)>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,14 +1107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:04<00:00,  2.22it/s]\n"
+      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [00:05<00:00,  2.12it/s]\n"
      ]
     }
    ],
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1148,10 +1148,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818751089)>"
+       "<ggplot: (8741319644446)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1186,10 +1186,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818834514)>"
+       "<ggplot: (8741319631263)>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1228,10 +1228,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818834829)>"
+       "<ggplot: (8741319637200)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1311,7 +1311,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.08s/it]\n"
+      "100%|██████████| 1/1 [00:02<00:00,  2.14s/it]\n"
      ]
     }
    ],
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1383,10 +1383,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818776701)>"
+       "<ggplot: (8741341837874)>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
        "      obsp:\t'spatial_connectivities'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,14 +1499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [01:14<00:00,  6.75s/it]\n"
+      "Now learning: Vascular_SMCs: 100%|██████████| 11/11 [02:00<00:00, 10.95s/it]\n"
      ]
     }
    ],
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1540,10 +1540,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726807255857)>"
+       "<ggplot: (8741342212036)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1578,10 +1578,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726818551010)>"
+       "<ggplot: (8741322903444)>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1600,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1616,10 +1616,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726796758497)>"
+       "<ggplot: (8741341949055)>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1661,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1696,17 +1696,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Now learning: CHL1:  25%|██▍       | 22/89 [00:14<00:44,  1.52it/s]      /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:343: RuntimeWarning: invalid value encountered in true_divide\n",
-      "Now learning: NPR3:  46%|████▌     | 41/89 [00:27<00:34,  1.40it/s]       /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:343: RuntimeWarning: invalid value encountered in true_divide\n",
-      "Now learning: CLEC12A:  92%|█████████▏| 82/89 [00:59<00:06,  1.15it/s]  /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:343: RuntimeWarning: invalid value encountered in true_divide\n",
-      "Now learning: CSF3R: 100%|██████████| 89/89 [01:04<00:00,  1.38it/s]  \n"
+      "Now learning: CHL1:  25%|██▍       | 22/89 [00:21<01:11,  1.07s/it]      /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:342: RuntimeWarning: invalid value encountered in true_divide\n",
+      "Now learning: NPR3:  46%|████▌     | 41/89 [00:39<00:47,  1.01it/s]       /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:342: RuntimeWarning: invalid value encountered in true_divide\n",
+      "Now learning: CLEC12A:  92%|█████████▏| 82/89 [01:18<00:05,  1.19it/s]  /home/dbdimitrov/anaconda3/envs/spiana/lib/python3.10/site-packages/liana/method/sp/_Misty.py:342: RuntimeWarning: invalid value encountered in true_divide\n",
+      "Now learning: CSF3R: 100%|██████████| 89/89 [01:23<00:00,  1.06it/s]  \n"
      ]
     }
    ],
@@ -1724,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1742,10 +1742,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8726796691982)>"
+       "<ggplot: (8741319666914)>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
