extend misty plots

--- a/docs/source/notebooks/targeted.ipynb
+++ b/docs/source/notebooks/targeted.ipynb
@@ -2243,7 +2243,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dc.plot_network()"
+   ]
   },
   {
    "cell_type": "code",
